Avoid badges overlapping banners

--- a/src/components/biggive-campaign-highlights/biggive-campaign-highlights.scss
+++ b/src/components/biggive-campaign-highlights/biggive-campaign-highlights.scss
@@ -26,7 +26,7 @@
   }
   .banner {
     top: 0;
-    margin-top: 2px;
+    margin-top: 19px;
     padding-bottom: $aspect-ratio-banners;
     background-color: #F1F1F1;
     background-size: contain;
